WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203278
[SVG2] Fix SVGSVGElement to conform with SVG2
https://bugs.webkit.org/show_bug.cgi?id=203278
Summary
[SVG2] Fix SVGSVGElement to conform with SVG2
Said Abou-Hallawa
Reported
2019-10-22 15:45:19 PDT
The interface of SVGSVGElement is defined here:
https://www.w3.org/TR/SVG2/struct.html#InterfaceSVGSVGElement
. Related WPT tests:
https://wpt.fyi/results/svg/historical.html?label=experimental&label=master&aligned
.
Attachments
Patch
(20.25 KB, patch)
2019-10-22 17:42 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(19.33 KB, patch)
2019-10-23 17:56 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-10-22 17:42:17 PDT
Created
attachment 381638
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-10-23 13:07:57 PDT
Comment on
attachment 381638
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=381638&action=review
> Source/WebCore/svg/SVGSVGElement.cpp:266 > + element.document().updateLayoutIgnorePendingStylesheets();
You can't call updateLayoutIgnorePendingStylesheets() and guarantee that the element is still valid. This function should keep a Ref<SVGElement> around.
> Source/WebCore/svg/SVGSVGElement.cpp:272 > + element.document().updateLayoutIgnorePendingStylesheets();
Ditto.
Said Abou-Hallawa
Comment 3
2019-10-23 17:56:41 PDT
Created
attachment 381758
[details]
Patch
WebKit Commit Bot
Comment 4
2019-10-23 20:43:06 PDT
Comment on
attachment 381758
[details]
Patch Clearing flags on attachment: 381758 Committed
r251527
: <
https://trac.webkit.org/changeset/251527
>
WebKit Commit Bot
Comment 5
2019-10-23 20:43:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-10-23 20:44:14 PDT
<
rdar://problem/56566735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug