[SVG2] Fix SVGSVGElement to conform with SVG2 https://bugs.webkit.org/show_bug.cgi?id=203278

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2019-10-23
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/svg/historical-expected.txt:
* web-platform-tests/svg/idlharness.window-expected.txt:
Some sub-tests are passing now with this change.

Source/WebCore:

The interface of SVGSVGElement is defined here:
    https://www.w3.org/TR/SVG2/struct.html#InterfaceSVGSVGElement

-- Delete the viewport attribute.
-- Delete the attributes contentScriptType and contentStyleType.
-- Delete pixelUnitxxx() and screenPixelxxx() functions.
-- Make the SVGElement argument to checkIntersection() and
   checkEnclosure() be non-optional.

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::checkIntersection):
(WebCore::SVGSVGElement::checkEnclosure):
(WebCore::SVGSVGElement::contentScriptType const): Deleted.
(WebCore::SVGSVGElement::setContentScriptType): Deleted.
(WebCore::SVGSVGElement::contentStyleType const): Deleted.
(WebCore::SVGSVGElement::setContentStyleType): Deleted.
(WebCore::SVGSVGElement::viewport const): Deleted.
(WebCore::SVGSVGElement::pixelUnitToMillimeterX const): Deleted.
(WebCore::SVGSVGElement::pixelUnitToMillimeterY const): Deleted.
(WebCore::SVGSVGElement::screenPixelToMillimeterX const): Deleted.
(WebCore::SVGSVGElement::screenPixelToMillimeterY const): Deleted.
(WebCore::SVGSVGElement::suspendRedraw): Deleted.
(WebCore::SVGSVGElement::unsuspendRedraw): Deleted.
(WebCore::SVGSVGElement::unsuspendRedrawAll): Deleted.
(WebCore::SVGSVGElement::forceRedraw): Deleted.
* svg/SVGSVGElement.h:
* svg/SVGSVGElement.idl:

LayoutTests:

* svg/custom/immutable-properties-expected.txt:
* svg/custom/immutable-properties.html:
SVGSVGElement.viewport has to be removed.

* svg/custom/intersection-list-null-expected.txt: Removed.
* svg/custom/intersection-list-null.svg: Removed.
The specs state that the SVGElement argument to checkIntersection() and
checkEnclosure() is not optional. This test was testing the argument
optional case.

Canonical link: https://commits.webkit.org/216760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251527 268f45cc-cd09-0410-ab3c-d52691b4dbfc